--- a/DevCard_MVC/Views/Home/ContactUs.cshtml
+++ b/DevCard_MVC/Views/Home/ContactUs.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model Contact
+
 @{
     ViewData["Title"] = "ContactUs";
 }
@@ -35,32 +36,34 @@
 					<h3 class="text-center mb-3">در دسترس باشید!</h3>
 					<div class="form-row">
 						<div class="form-group col-md-6">
-							<label class="sr-only" for="cname">نام</label>
-							<input type="text" class="form-control" id="cname" name="name" placeholder="نام"
-								minlength="2" required="" aria-required="true">
+							<label class="sr-only" asp-for="Name"></label>
+							<input type="text" class="form-control" asp-for="Name" placeholder="نام" />
+							<span style="color: red" asp-validation-for="Name"></span>
 						</div>
 						<div class="form-group col-md-6">
-							<label class="sr-only" for="cemail">ایمیل</label>
-							<input type="email" class="form-control" id="cemail" name="email" placeholder="ایمیل"
-								required="" aria-required="true">
+							<label class="sr-only" asp-for="Email"></label>
+							<input type="email" class="form-control" asp-for="Email" placeholder="ایمیل" />
+							<span style="color: red" asp-validation-for="Email"></span>
 						</div>
 						<div class="form-group col-12">
-							<select id="services" class="custom-select" name="services">
+							<select class="custom-select" asp-for="Service">
 								<option selected>سرویس مورد نظر خود را انتخاب کنید...</option>
 								<option value="basic">نقره ای</option>
 								<option value="standard">طلایی</option>
 								<option value="premium">پلاتین</option>
 								<option value="not sure">الماس</option>
 							</select>
+							<span style="color: red" asp-validation-for="Service"></span>
 						</div>
 						<div class="form-group col-12">
 							<label class="sr-only" for="cmessage">پیغام شما</label>
-							<textarea class="form-control" id="cmessage" name="message"
-								placeholder="پیغام خود را وارد نمایید ..." rows="10" required=""
-								aria-required="true"></textarea>
+							<textarea class="form-control" asp-for="Message"
+								placeholder="پیغام خود را وارد نمایید ..." rows="10"></textarea>
+								<span style="color: red" asp-validation-for="Message"></span>
 						</div>
 						<div class="form-group col-12">
-							<button type="submit" class="btn btn-block btn-primary py-2">ارسال</button>
+							<button type="submit" class="btn btn-block btn-primary py-2" 
+							asp-controller="Home" asp-action="ContactUs">ارسال</button>
 						</div>
 					</div>
 				</form>
